--- a/src/index.css
+++ b/src/index.css
@@ -2389,6 +2389,26 @@
     @apply focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all;
   }
 
+  .upgrade-form-input-error {
+    @apply border-red-500 bg-red-50;
+  }
+
+  .upgrade-form-input-error:focus {
+    @apply ring-red-500 border-red-500;
+  }
+
+  .upgrade-form-field-error {
+    @apply text-red-600 text-sm italic mt-1;
+  }
+
+  .upgrade-form-checkbox-error {
+    @apply border-red-500;
+  }
+
+  .upgrade-form-checkbox-label-error {
+    @apply text-red-600;
+  }
+
   .upgrade-form-textarea {
     @apply w-full px-4 py-3 border border-gray-300 rounded-lg text-base;
     @apply focus:ring-2 focus:ring-blue-500 focus:border-blue-500 transition-all;
